--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-5.05MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
-  - {name: 捷克-213.9KB/s(Youtube:不良林), server: t03.ssrsub.com, port: 18443, type: trojan, password: f736834f-1fc8-4738-9884-9afe0eb0d818, sni: t03.ssrsub.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.39MB/s(Youtube:不良林), server: cm-gz.okvpn.xyz, port: 20009, type: trojan, password: 2c100ffe-4f52-4133-8c5c-d053fed7b270, sni: cm-gz.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-3.72MB/s(Youtube:不良林), server: 165.154.253.68, port: 80, type: vmess, uuid: 1764e589-7fa9-43f6-9e7e-25733729f61f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 165.154.253.68}}
-  - {name: 🇨🇳 中国-158.7KB/s(Youtube:不良林), server: zh01lv5sgp03.feiguayun.xyz, port: 34087, type: ss, cipher: aes-256-gcm, password: 4b5d7ed5-e1a3-4947-b955-58a39a29cc29}
-  - {name: 🇨🇳 中国-2.21MB/s(Youtube:不良林), server: ah.b.speedabc.xyz, port: 42002, type: trojan, password: 804d36c2-0585-4568-b277-eaabf4bc8e48, sni: ah.b.speedabc.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.49MB/s(Youtube:不良林), server: 212.81.47.18, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.72MB/s(Youtube:不良林), server: shcm.pdjc.cc, port: 42000, type: trojan, password: b7dcc148-c8a3-4173-931f-8ecf9413eb58, sni: shcm.pdjc.cc, skip-cert-verify: true}
   - {name: 🇯🇵 日本-5.31MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.71MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇺🇸 美国-376.9KB/s(Youtube:不良林), server: sg01.czsx1624.tk, port: 443, type: vmess, uuid: d002b422-eace-4e01-bf58-e4bb0bcfe7af, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /3a8545177/, ws-headers: {Host: sg01.czsx1624.tk}}
+  - {name: 🇩🇪 德国-3.11MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.58MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-175.5KB/s(Youtube:不良林), server: 165.154.253.68, port: 80, type: vmess, uuid: 1764e589-7fa9-43f6-9e7e-25733729f61f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 165.154.253.68}}
+  - {name: 🇨🇳 中国-567.2KB/s(Youtube:不良林), server: hk64.fans8.xyz, port: 443, type: trojan, password: 96abb4d5-d709-40bd-9933-58f57b67c641, sni: hk64.fans8.xyz, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-2.60MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇷🇺 俄罗斯联邦-2.41MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇦🇺 澳大利亚-1.99MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-798.6KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
-      - 捷克-213.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-158.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.72MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.31MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-376.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-175.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-567.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.60MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-798.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
-      - 捷克-213.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-158.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.72MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.31MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-376.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-175.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-567.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.60MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-798.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
-      - 捷克-213.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-158.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.72MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.31MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-376.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-175.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-567.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.60MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-798.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
-      - 捷克-213.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-158.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.72MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.31MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-376.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-175.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-567.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.60MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-798.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
-      - 捷克-213.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-158.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.72MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.31MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-376.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-175.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-567.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.60MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-798.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
-      - 捷克-213.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-158.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.72MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.31MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-376.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-175.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-567.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.60MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-798.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
-      - 捷克-213.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.39MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-158.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.72MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.31MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-376.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-175.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-567.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.60MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-798.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
